unpackaged/main/default/objects/VoiceCall/fields/Call_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Start_Time__c</fullName>
    <description>Extracts time value from the Create Date field, as time doesnt show in the reports, date only.</description>
    <formula>TIMEVALUE( CallStartDateTime )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Start (Time)</label>
    <type>Time</type>
</CustomField>