unpackaged/main/default/objects/VoiceCall/fields/CreateDate__c.field-meta.xml
<CustomField>
    <fullName>CreateDate__c</fullName>
    <description>Converts data/time field to date</description>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreateDate</label>
    <type>Date</type>
</CustomField>