unpackaged/main/default/objects/VoiceCall/fields/isCreatedToday__c.field-meta.xml
<CustomField>
    <fullName>isCreatedToday__c</fullName>
    <description>Checking if record create date is today - to be used in scheduled flow</description>
    <formula>DATEVALUE(CreatedDate)=  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isCreatedToday</label>
    <type>Checkbox</type>
</CustomField>