unpackaged/main/default/objects/VoiceCall/fields/isRealtedToLead__c.field-meta.xml
<CustomField>
    <fullName>isRealtedToLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by flow when Id related record Id starts with 00Q (lead)</description>
    <label>isRealtedToLead</label>
    <type>Checkbox</type>
</CustomField>