unpackaged/main/default/objects/VoiceCall/fields/isRelatedToContact__c.field-meta.xml
<CustomField>
    <fullName>isRelatedToContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by flow when Id related record Id starts with 003 (Contact)</description>
    <label>isRelatedToContact</label>
    <type>Checkbox</type>
</CustomField>