unpackaged/main/default/objects/VoiceCall/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Updated by Omni Channel flow - where call is related to a lead, it will transfer its Lead Source on to the call for agents to see and some page components to react/display.</description>
    <label>Lead Source</label>
    <length>200</length>
    <type>Text</type>
</CustomField>