unpackaged/main/default/objects/VoiceCall/fields/OP_CallAttempt__c.field-meta.xml
<CustomField>
    <fullName>OP_CallAttempt__c</fullName>
    <label>Call Attempt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>