unpackaged/main/default/objects/VoiceCall/fields/Op_CallSummary__c.field-meta.xml
<CustomField>
    <fullName>Op_CallSummary__c</fullName>
    <inlineHelpText>Auto generated by AWS at the end of each call.</inlineHelpText>
    <label>Call Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>