unpackaged/main/default/objects/VoiceCall/fields/OP_Dialler__c.field-meta.xml
<CustomField>
    <fullName>OP_Dialler__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify if the call was initiated by the dialler. Outbound Campaign</description>
    <label>Dialler</label>
    <type>Checkbox</type>
</CustomField>