unpackaged/main/default/objects/VoiceCall/fields/OP_DOB_Match__c.field-meta.xml
<CustomField>
    <fullName>OP_DOB_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DOB Match</label>
    <type>Checkbox</type>
</CustomField>