unpackaged/main/default/objects/VoiceCall/fields/OP_isCallOutcomePopulated__c.field-meta.xml
<CustomField>
    <fullName>OP_isCallOutcomePopulated__c</fullName>
    <formula>NOT(ISPICKVAL( OP_OutboundCallOutcome__c, &quot;&quot;))</formula>
    <label>is Call Outcome Populated</label>
    <type>Checkbox</type>
</CustomField>