unpackaged/main/default/objects/VoiceCall/fields/OP_OutboundCallOutcome__c.field-meta.xml
<CustomField>
    <fullName>OP_OutboundCallOutcome__c</fullName>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voicemail left</fullName>
            </value>
            <value>
                <fullName>No contact made</fullName>
            </value>
            <value>
                <fullName>Unacceptable risk</fullName>
            </value>
            <value>
                <fullName>Accept online</fullName>
            </value>
            <value>
                <fullName>Callback arranged</fullName>
            </value>
            <value>
                <fullName>Doesn&#39;t want quote</fullName>
            </value>
            <value>
                <fullName>Duplicate quote</fullName>
            </value>
            <value>
                <fullName>Invalid number</fullName>
            </value>
            <value>
                <fullName>Not ready to purchase</fullName>
            </value>
            <value>
                <fullName>On Cover</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Taken elsewhere</fullName>
            </value>
            <value>
                <fullName>Number blocked</fullName>
            </value>
            <value>
                <fullName>H&amp;R car/van insurance</fullName>
            </value>
            <value>
                <fullName>Closed by Administrator</fullName>
            </value>
            <value>
                <fullName>Quoted - Follow up</fullName>
            </value>
            <value>
                <fullName>Quoted - No follow up</fullName>
            </value>
            <value>
                <fullName>Wrong department - transferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>