unpackaged/main/default/objects/VoiceCall/fields/OP_OutboundCampaignStatus__c.field-meta.xml
<CustomField>
    <fullName>OP_OutboundCampaignStatus__c</fullName>
    <label>Outbound Campaign Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>