unpackaged/main/default/objects/VoiceCall/fields/Op_PolicyType__c.field-meta.xml
<CustomField>
    <fullName>Op_PolicyType__c</fullName>
    <inlineHelpText>The policy type which is carried over from the identified policy.</inlineHelpText>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Annuity</fullName>
            </value>
            <value>
                <fullName>Commercial Auto</fullName>
            </value>
            <value>
                <fullName>Commercial Property</fullName>
            </value>
            <value>
                <fullName>Workers&#39; Compensation</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Haulage</fullName>
            </value>
            <value>
                <fullName>Professional Indemnity</fullName>
            </value>
            <value>
                <fullName>AB Liability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>