unpackaged/main/default/objects/VoiceCall/fields/Op_QueueName__c.field-meta.xml
<CustomField>
    <fullName>Op_QueueName__c</fullName>
    <description>Replicates the Queue name to be used in list views.</description>
    <formula>CASE(QueueName, 
&quot;OP_OmniNewBusiness&quot;, &quot;New Business&quot;, 
&quot;OP_OmniRenewals&quot;, &quot;Renewals&quot;,
&quot;OP_OmniContactCenter&quot;, &quot;Customer Service&quot;,
&quot;OP_OmniQuotezone&quot;, &quot;Quotezone&quot;,
&quot;New Claims&quot;, &quot;New Claims&quot;,
&quot;No Queue Found&quot;)</formula>
    <label>Queue Name</label>
    <type>Text</type>
</CustomField>