unpackaged/main/default/objects/VoiceCall/fields/OP_User_Inputted_DOB__c.field-meta.xml
<CustomField>
    <fullName>OP_User_Inputted_DOB__c</fullName>
    <label>User Inputted DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>