unpackaged/main/default/objects/VoiceCall/fields/OP_UserInputtedDOB__c.field-meta.xml
<CustomField>
    <fullName>OP_UserInputtedDOB__c</fullName>
    <inlineHelpText>The date of birth provided by the user during verification.</inlineHelpText>
    <label>User Inputted DOB</label>
    <length>8</length>
    <type>Text</type>
</CustomField>