unpackaged/main/default/objects/VoiceCall/fields/OP_UserInputtedPostcode__c.field-meta.xml
<CustomField>
    <fullName>OP_UserInputtedPostcode__c</fullName>
    <inlineHelpText>The numeric part of the postcode provided by the user during verification.</inlineHelpText>
    <label>User Inputted Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>