unpackaged/main/default/objects/VoiceCall/validationRules/Call_Outcome_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Call_Outcome_is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),

   NOT(ISPICKVAL($User.UserType, &quot;AutomatedProcess&quot;)),

   $User.LastName &lt;&gt; &quot;Connect-CRM2&quot;,
   OP_OutboundCampaignStatus__c = &quot;Answered&quot;,
   ISPICKVAL(OP_OutboundCallOutcome__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>OP_OutboundCallOutcome__c</errorDisplayField>
    <errorMessage>Call Outcome is required.</errorMessage>
</ValidationRule>