unpackaged/main/default/objects/VoiceCall/listViews/My_Voice_Calls_to_Update.listView-meta.xml
<ListView>
    <fullName>My_Voice_Calls_to_Update</fullName>
    <columns>Name</columns>
    <columns>CallType</columns>
    <columns>OP_OutboundCallOutcome__c</columns>
    <columns>OP_Dialler__c</columns>
    <columns>FromPhoneNumber</columns>
    <columns>Owner</columns>
    <columns>User</columns>
    <columns>RelatedRecord</columns>
    <columns>Op_QueueName__c</columns>
    <columns>LastModifiedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OP_OutboundCallOutcome__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CreatedDate</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>User</field>
        <operation>contains</operation>
        <value>Phil,Lewis,Ian,Anthony</value>
    </filters>
    <filters>
        <field>RelatedRecord</field>
        <operation>notEqual</operation>
    </filters>
    <label>My Voice Calls to Update</label>
</ListView>