unpackaged/main/default/objects/VoiceCall/listViews/My_Voice_Calls_Today.listView-meta.xml
<ListView>
    <fullName>My_Voice_Calls_Today</fullName>
    <columns>Name</columns>
    <columns>CallType</columns>
    <columns>FromPhoneNumber</columns>
    <columns>CallResolution</columns>
    <columns>CallStartDateTime</columns>
    <columns>EndUser</columns>
    <columns>Owner</columns>
    <columns>CallOrigin</columns>
    <columns>QualityScore</columns>
    <filterScope>Mine</filterScope>
    <label>My Voice Calls Today</label>
</ListView>