unpackaged/main/default/objects/VoiceCall/listViews/My_VoiceCalls.listView-meta.xml
<ListView>
    <fullName>My_VoiceCalls</fullName>
    <columns>Name</columns>
    <columns>CallType</columns>
    <columns>FromPhoneNumber</columns>
    <columns>CallResolution</columns>
    <columns>CallStartDateTime</columns>
    <columns>EndUser</columns>
    <columns>Owner</columns>
    <columns>CallOrigin</columns>
    <columns>QualityScore</columns>
    <filterScope>Mine</filterScope>
    <label>My Voice Calls (All)</label>
</ListView>