unpackaged/main/default/objects/VoiceCall/listViews/OP_OmniContactCenter_VoiceCall.listView-meta.xml
<ListView>
    <fullName>OP_OmniContactCenter_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>Customer Service</label>
    <queue>OP_OmniContactCenter</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>