unpackaged/main/default/objects/VoiceCall/listViews/OP_OmniNewBusiness_VoiceCall.listView-meta.xml
<ListView>
    <fullName>OP_OmniNewBusiness_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>New Business</label>
    <queue>OP_OmniNewBusiness</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>