unpackaged/main/default/objects/VoiceCall/listViews/OP_OmniQuotezone_VoiceCall.listView-meta.xml
<ListView>
    <fullName>OP_OmniQuotezone_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>Quotezone</label>
    <queue>OP_OmniQuotezone</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>