unpackaged/main/default/objects/VoiceCall/listViews/OP_OmniRenewals_VoiceCall.listView-meta.xml
<ListView>
    <fullName>OP_OmniRenewals_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>Renewals</label>
    <queue>OP_OmniRenewals</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>