unpackaged/main/default/objects/VoiceCall/listViews/SCV_Basic_Queue_CCQ_04vPy000005y7zp_VoiceCall.listView-meta.xml
<ListView>
    <fullName>SCV_Basic_Queue_CCQ_04vPy000005y7zp_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>SCV Basic Queue</label>
    <queue>SCV_Basic_Queue_CCQ_04vPy000005y7zp</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>